<resources>
    <string name="app_name">ExampleApp</string>
    <string name="dummy"> </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="login_activity">Login activity</string>
    <string name="error_field_empty">Field is required</string>

    <!-- Strings related to main -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <!-- Strings related to navigation view -->
    <string name="nav_gallery">Gallery</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_logout">Logout</string>

    <string name="try_again">Try again</string>
    <string name="postList_empty">There are no posts here</string>

</resources>
