<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery_black_24px"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24px"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24px"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black_24px"
                android:title="@string/nav_send" />
        </menu>
    </item>

    <item android:title="@null">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_black_24px"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
